--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,16 +4,17 @@
     "plugin:import/errors",
     "plugin:react/recommended",
     "plugin:jsx-a11y/recommended",
-    "prettier", 
+    "prettier",
     "prettier/react"
   ],
   "rules": {
-    "react/prop-types" : 0,
+    "react/prop-types": 0,
     "no-console": 1,
-
+    "react-hooks/rules-of-hooks": 2,
+    "react-hooks/exhaustive-deps": 1
   },
 
-  "plugins": ["react", "import", "jsx-a11y"],
+  "plugins": ["react", "import", "jsx-a11y", "react-hooks"],
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
@@ -28,7 +29,7 @@
   },
   "settings": {
     "react": {
-      "version" : "detect"
+      "version": "detect"
     }
   }
 }
